4th video 26 min tak ka kar liya hai yaha tak sab sahi hai

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-   <p>this is contact page</p>
+    <a href='/'>Home</a>
+    <a href='/about/'>about</a>
+   <h1>this is contact page</h1>
     
 </body>
 
