--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,7 @@
 </head>
 
 <body>
-    <a href='/contact/'>contact</a>
-    <a href='/'>home</a>
-   <h1>this is about page</h1>
+ {% block start %}{% endblock  %}
 </body>
 
 </html>
