--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+   <h1>this is index page</h1>
+
+    <a href='/contact/'>contact</a>
+    <a href='/about/'>about</a>
+    
     <table class="table">
 
         <tr>
