--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,26 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <style>
-        table,
-        th,
-        td {
-            border: 2px solid black;
-        }
-    </style>
-</head>
-
-<body>
+{% extends 'base.html' %}
+{%block start%}
     <a href='/'>Home</a>
     <a href='/about/'>about</a>
    <h1>this is contact page</h1>
-    
-</body>
-
-</html>
+   {%endblock%}
