--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <style>
-        table,
-        th,
-        td {
-            border: 2px solid black;
-        }
-    </style>
-</head>
-
-<body>
+{% extends 'base.html' %}
+{%block start%}
    <h1>this is index page</h1>
 
     <a href='/contact/'>contact</a>
@@ -57,6 +40,4 @@
         {% comment %} {{veg[0]}} {% endcomment %}
     {% if 'cucumber' in veg %} yes  {%else%} no its not in {{veg}} {%endif%}
     </p>
-</body>
-
-</html>
+{%endblock%}
