--- a/vege/templates/recepies.html
+++ b/vege/templates/recepies.html
@@ -1,20 +1,29 @@
 {% extends 'base.html' %}
 {%block start%}
-   <div class="container">
-    <form>
+<!-- col-6 mx-auto card p-3 shadow-lg -->
+   <div class="container mt-5">
+    <form class="card p-3 col-12" method="post" enctype="multipart/form-data">
+      {%csrf_token%}
+      <h2 style="text-align: center;">Add Recipie</h2>
+      <hr> 
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Recipie </label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          <label for="exampleInputEmail1" class="form-label">Recipie name</label>
+          <input name = "receipe_name" required type="text" class="form-control" >
+          <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
         </div>
         <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
+          <label for="exampleInputPassword1" class="form-label">Recipie Description</label>
+          <textarea name = "receipe_description" required class="form-control" style="height: 180px;"></textarea>
+          <!-- <input type="password" class="form-control" id="exampleInputPassword1"> -->
         </div>
-        <div class="mb-3 form-check">
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Recipie Image</label>
+          <input name = "receipe_image" type="file" class="form-control">
+        </div>
+        <!-- <div class="mb-3 form-check">
           <input type="checkbox" class="form-check-input" id="exampleCheck1">
           <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
+        </div> -->
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
    </div>
