--- a/vege/templates/recepies.html
+++ b/vege/templates/recepies.html
@@ -26,5 +26,26 @@
         </div> -->
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-   </div>
+      {% comment %} {{receipes}} {% endcomment %}
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">S no</th>
+            <th scope="col">receipe_name</th>
+            <th scope="col">receipe_description</th>
+            <th scope="col">receipe_image</th>
+          </tr>
+          {% for receipe in receipes%}
+          <tr>
+
+              <th scope="row">{{forloop.counter}}</th>
+              <td>{{receipe.receipe_name}}</td>
+              <td>{{receipe.receipe_description}}</td>
+              <td>{{receipe.receipe_image}}</td>
+
+          </tr>
+          {% endfor %}
+      </table>
+      </table>
+    </div>
    {%endblock%}
