--- a/vege/templates/recepies.html
+++ b/vege/templates/recepies.html
@@ -33,7 +33,8 @@
             <th scope="col">S no</th>
             <th scope="col">receipe_name</th>
             <th scope="col">receipe_description</th>
-            <th scope="col">receipe_image</th>
+            <th scope="col">receipe_description</th>
+            <th scope="col">Actions</th>
           </tr>
           {% for receipe in receipes%}
           <tr>
@@ -41,7 +42,11 @@
               <th scope="row">{{forloop.counter}}</th>
               <td>{{receipe.receipe_name}}</td>
               <td>{{receipe.receipe_description}}</td>
-              <td>{{receipe.receipe_image}}</td>
+              <td>
+                <img src="/media/{{receipe.receipe_image}}" style="height: 200px;"></td>
+                <td>
+                  <a href="/delete_receipe/{{receipe.id}}/" class="btn btn-danger">Delete</button>
+                </td>
 
           </tr>
           {% endfor %}
