--- a/vege/templates/recepies.html
+++ b/vege/templates/recepies.html
@@ -45,12 +45,13 @@
               <td>
                 <img src="/media/{{receipe.receipe_image}}" style="height: 200px;"></td>
                 <td>
-                  <a href="/delete_receipe/{{receipe.id}}/" class="btn btn-danger">Delete</button>
+                  <a href="/delete_receipe/{{receipe.id}}/" class="btn btn-danger m-1">Delete</button>
+                    <a href="/update_receipe/{{receipe.id}}/" class="btn btn-success m-1">Update</button>
                 </td>
 
           </tr>
           {% endfor %}
       </table>
-      </table>
+  
     </div>
    {%endblock%}
