10th video 12 min 27 sec tak ho gaya

--- a/vege/templates/recepies.html
+++ b/vege/templates/recepies.html
@@ -26,8 +26,21 @@
         </div> -->
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+   <div class="mt-5">
+    <div class="mx-auto col-6">
+      <form>
+      <div class="mb-3">
+        <hr>   
+        <label for="exampleInputEmail1" class="form-label">Search recipie</label>
+        <input name = "search" type="text" class="form-control" >
+        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+      </div>
+      <button type="submit" class="btn btn-primary m-1">Search</button>
+    </form>
+    </div>
+   </div>
       {% comment %} {{receipes}} {% endcomment %}
-      <table class="table">
+      <table class="table mt-5">
         <thead>
           <tr>
             <th scope="col">S no</th>
