--- a/vege/templates/recepies.html
+++ b/vege/templates/recepies.html
@@ -4,67 +4,13 @@
    <div class="container mt-5">
     <form class="card p-3 col-12" method="post" enctype="multipart/form-data">
       {%csrf_token%}
-      <h2 style="text-align: center;">Add Recipie</h2>
+      <h2 style="text-align: center;">Upload pdf</h2>
       <hr> 
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Recipie name</label>
-          <input name = "receipe_name" required type="text" class="form-control" >
-          <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Recipie Description</label>
-          <textarea name = "receipe_description" required class="form-control" style="height: 180px;"></textarea>
-          <!-- <input type="password" class="form-control" id="exampleInputPassword1"> -->
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Recipie Image</label>
+          <label for="exampleInputPassword1" class="form-label">Pdf doc</label>
           <input name = "receipe_image" type="file" class="form-control">
         </div>
-        <!-- <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div> -->
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-   <div class="mt-5">
-    <div class="mx-auto col-6">
-      <form>
-      <div class="mb-3">
-        <hr>   
-        <label for="exampleInputEmail1" class="form-label">Search recipie</label>
-        <input name = "search" type="text" class="form-control" >
-        <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-      </div>
-      <button type="submit" class="btn btn-primary m-1">Search</button>
-    </form>
-    </div>
-   </div>
-      {% comment %} {{receipes}} {% endcomment %}
-      <table class="table mt-5">
-        <thead>
-          <tr>
-            <th scope="col">S no</th>
-            <th scope="col">receipe_name</th>
-            <th scope="col">receipe_description</th>
-            <th scope="col">receipe_description</th>
-            <th scope="col">Actions</th>
-          </tr>
-          {% for receipe in receipes%}
-          <tr>
-
-              <th scope="row">{{forloop.counter}}</th>
-              <td>{{receipe.receipe_name}}</td>
-              <td>{{receipe.receipe_description}}</td>
-              <td>
-                <img src="/media/{{receipe.receipe_image}}" style="height: 200px;"></td>
-                <td>
-                  <a href="/delete_receipe/{{receipe.id}}/" class="btn btn-danger m-1">Delete</button>
-                    <a href="/update_receipe/{{receipe.id}}/" class="btn btn-success m-1">Update</button>
-                </td>
-
-          </tr>
-          {% endfor %}
-      </table>
-  
     </div>
    {%endblock%}
