--- a/vege/templates/pd.html
+++ b/vege/templates/pd.html
@@ -8,8 +8,8 @@
 <body>
     {% comment %} <a href="{{file}}" download="{{file}}">click here to download1</a>
     <a href="{{file}}" download>click here to download2</a> {% endcomment %}
-    <a href="#" download="{{file}}">click here to download</a>
-    <h1>{{file}}</h1>
+    <a href="/media/pdf_fol/{{d}}" download="converted_pdf.docx">click here to download</a>
+    <h1>{{f}}</h1>
 
 </body>
 </html>
