--- a/vege/templates/login.html
+++ b/vege/templates/login.html
@@ -7,19 +7,23 @@
         {%csrf_token%}
         <h2 style="text-align: center;">Login</h2>
         <hr>
+        {% comment %} {% if messages %}
+        <div class="alert alert-primary" role="alert">
+            {% for message in messages %}
+            {{ message }}
+            {% endfor %}
+          </div>
+        {% endif %} {% endcomment %}
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">User Name</label>
-              <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="text" class="form-control" required id="exampleInputEmail1" aria-describedby="emailHelp">
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="password" required class="form-control" id="exampleInputPassword1">
             </div>
-            <!-- <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div> -->
+            <p>Don't have account <a href='/register/'>Register</a></p>
             <button type="submit" class="btn btn-primary">Submit</button>
         <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
     </form>
