--- a/vege/templates/register.html
+++ b/vege/templates/register.html
@@ -2,21 +2,43 @@
 {%block start%}
 
 <div class="container mt-5">
-    <!-- <form class="card p-3 col-12" method="post" enctype="multipart/form-data"> -->
+
     <form class="card p-3 col-12" method="post">
+        
         {%csrf_token%}
         <h2 style="text-align: center;">Register</h2>
         <hr>
+        {% if messages %}
+        <div class="alert alert-primary" role="alert">
+            {% for message in messages %}
+            {{ message }}
+            {% endfor %}
+          </div>
+        {% endif %}
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">First Name</label>
+            <input type="text" class="form-control" required name="first_name" id="exampleInputEmail1" aria-describedby="emailHelp">
+        
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Last Name</label>
+            <input type="text" class="form-control" required name="last_name" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+        </div>
         <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">User Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="text" class="form-control" required name="username" id="exampleInputEmail1" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
         </div>
+
         <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="password" class="form-control" required name="password" id="exampleInputPassword1">
         </div>
+
+        <p>Already have a account <a href='/login/'>Log in</a></p>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
 </div>
 {%endblock%}
