--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -17,6 +17,19 @@
 </head>
 
 <body>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand">{{request.user.first_name}}</a>
+          <form class="d-flex" role="search">
+            {% comment %} <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> {% endcomment %}
+            {% if request.user.is_authenticated %}
+            <a href="/logout/" class="btn btn-outline-success" type="submit">Logout</a>
+            {% else %}
+            <a href="/login/" class="btn btn-outline-success" type="submit">Login</a>
+            {% endif  %}
+        </form>
+        </div>
+      </nav>
  {% block start %}
  {% endblock  %}
 </body>
