--- a/vege/templates/login.html
+++ b/vege/templates/login.html
@@ -7,21 +7,21 @@
         {%csrf_token%}
         <h2 style="text-align: center;">Login</h2>
         <hr>
-        {% comment %} {% if messages %}
+         {% if messages %}
         <div class="alert alert-primary" role="alert">
             {% for message in messages %}
             {{ message }}
             {% endfor %}
           </div>
-        {% endif %} {% endcomment %}
+        {% endif %} 
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">User Name</label>
-              <input type="text" class="form-control" required id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="text" class="form-control" required name="username" id="exampleInputEmail1" aria-describedby="emailHelp">
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" required class="form-control" id="exampleInputPassword1">
+              <input type="password" required class="form-control" name="password" id="exampleInputPassword1">
             </div>
             <p>Don't have account <a href='/register/'>Register</a></p>
             <button type="submit" class="btn btn-primary">Submit</button>
