--- a/vege/templates/recepies.html
+++ b/vege/templates/recepies.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {%block start%}
 <!-- col-6 mx-auto card p-3 shadow-lg -->
+{% comment %} {{request.user.first_name}} {% endcomment %}
    <div class="container mt-5">
     <form class="card p-3 col-12" method="post" enctype="multipart/form-data">
       {%csrf_token%}
