--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -17,9 +17,11 @@
 </head>
 
 <body>
-    <nav class="navbar bg-body-tertiary">
+    {% comment %} bg-body-tertiary {% endcomment %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <nav class="navbar bg-dark "> 
         <div class="container-fluid">
-          <a class="navbar-brand">{{request.user.first_name}}</a>
+          <a style="color:white;" class="navbar-brand">Welcome {{request.user.first_name}}</a>
           <form class="d-flex" role="search">
             {% comment %} <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> {% endcomment %}
             {% if request.user.is_authenticated %}
