--- a/vege/templates/login.html
+++ b/vege/templates/login.html
@@ -7,13 +7,26 @@
         {%csrf_token%}
         <h2 style="text-align: center;">Login</h2>
         <hr>
-         {% if messages %}
+         {% comment %} {% if messages %}
         <div class="alert alert-primary" role="alert">
             {% for message in messages %}
             {{ message }}
             {% endfor %}
           </div>
-        {% endif %} 
+        {% endif %}  {% endcomment %}
+        
+        {% if messages %}
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            {% for message in messages %}
+            {{ message }}
+            {% endfor %}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          {% endif %}
+        {% comment %} <div class="alert alert-warning alert-dismissible fade show" role="alert">
+          <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div> {% endcomment %}
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">User Name</label>
               <input type="text" class="form-control" required name="username" id="exampleInputEmail1" aria-describedby="emailHelp">
