--- a/vege/templates/report/students.html
+++ b/vege/templates/report/students.html
@@ -2,6 +2,17 @@
 {%block start%}
 
 <div class="container mt-5">
+<form class="mb-4 ">
+    <div class="row">
+        <div class="col-md-6">
+            <input class="form-control" name="search" placerholder='search'>
+        </div>
+
+        <div class='col-md-6'>
+            <button class="btn btn-success">Search</button>
+        </div>
+    </div>
+</form>
     <table class="table table-striped">
         <thead>
           <tr>
